--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@
   --color-input-dark: #1e2a47;
   --color-search-light: #0079ff;
   --color-search-dark: #0079ff;
+  --color-search-hover: #60abff;
   --color-followers-light: #f6f8ff;
   --color-followers-dark: #141d2f;
 
